infra/K8s/post-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-dep
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec: 
      containers:
        - name: posts
          image: rupamswain1/post
