infra/K8s/comment-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: rupamswain1/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comment-cluster-service
spec:
  selector:
    app: comments
  ports:
    -  name: comments
       protocol: TCP
       port: 8001
