infra/K8s/event-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-dep
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: event
  template:
    metadata:
      labels:
        app: event
    spec: 
      containers:
        - name: evemt
          image: rupamswain1/event
---
apiVersion: v1
kind: Service
metadata: 
  name: event-srv
spec: 
  selector:
    app: event
  ports:
    - name: event
      protocol: TCP
      port: 8005
