infra/K8s/post-srv.yaml
apiVersion: v1
kind: Service
metadata: 
  name: post-srv
spec:
  type: NodePort
  selector: 
    app: posts
  ports: 
    - name: posts
      protocol: TCP
      port: 8000
      targetPort: 8000
