infra/K8s/query-service-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: query-service-dep
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: query-service
  template: 
    metadata: 
      labels: 
        app: query-service
    spec: 
      containers:
        - name: query-service
          image: rupamswain1/query-service
---
apiVersion: v1
kind: Service
metadata: 
  name: query-cluster-service
spec:
  selector: 
    app: query-service
  ports:
    - name: query-service
      protocol: TCP
      port: 8002
