infra/K8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-srv
  annotations: 
    kubernetes.io/ingress.class: nginx
spec: 
  rules: 
    - host: post.com
      http:
        paths:
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: post-srv
                port:
                  number: 8000
